--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,3 +105,49 @@ a {
     color-scheme: dark;
   }
 }
+
+.clientes{
+  width: 130px;
+  height: 130px;
+  background-color: blueviolet;
+  margin: 14px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  border-radius: 20px;
+  padding: 10px;
+}
+  #listaClientes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+  }
+  #titulo{
+    width: 100%;
+    height:80px ;
+    background-color: darkgreen;
+    font-size: 30px;
+  }
+  .bolinha{
+    background-color: pink;
+    width:30px ;
+    height: 30px;
+    border-radius: 15px;
+    align-content: center;
+  
+  }
+  .pacientes{
+  background-color:blue;
+  width: 280px;
+  height: 80px;
+  margin: 50px;
+  padding:20px;
+  }
+  .botao{
+    background-color: yellow;
+    margin: 5px;
+  }
+  
